# Mate-Desktop-Environment

./: README  base-clone.sh  base-pull.sh  clone-base.sh  clone-extra.sh  extra-clone.sh  extra-pull.sh  serial-key
libmate/: AUTHORS  ChangeLog  ChangeLog.pre-git  MAINTAINERS  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  autogen.sh  config.h.in  config.h.in~  configure  configure.in  libmate-zip.in
libmate/doc/: Makefile.in
libmate/libmate/: Makefile.am  Makefile.in  dllmain.c  libmate-2.0-uninstalled.pc.in  libmate-2.0.pc.in  libmate-private.h  libmate.h  libmatetypebuiltins.c  libmatetypebuiltins.h  mate-config.c  mate-config.h  mate-exec.c  mate-exec.h  mate-help.c  mate-help.h  mate-i18n.c  mate-i18n.h  mate-init.c  mate-init.h  mate-macros.h  mate-mateconf.c  mate-mateconf.h  mate-mateconfP.h  mate-open.c  mate-program.c  mate-program.h  mate-score.c  mate-score.h  mate-sound.c  mate-sound.h  mate-triggers.c  mate-triggers.h  mate-triggersP.h  mate-url.c  mate-url.h  mate-util.c  mate-util.h  parse-path.cP
libmate/mate-data/: Makefile.am  Makefile.in  gtk2-mate-events.soundlist.in  mate-default.xml.in.in  mate-options.7  mate.soundlist.in
libmate/monikers/: MATE_Moniker_std.server.in.in  Makefile.am  Makefile.in  matecomponent-config-bag.c  matecomponent-config-bag.h  matecomponent-moniker-conf-indirect.c  matecomponent-moniker-config.c  matecomponent-moniker-extra.c  matecomponent-moniker-extra.h
libmate/po/: ChangeLog  LINGUAS  POTFILES.in  POTFILES.skip  am.po  ar.po  as.po  ast.po  az.po  be.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  crh.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  ga.po  gl.po  gu.po  he.po  hi.po  (+55 more)
libmate/schemas/: Makefile.am  Makefile.in  desktop_mate_accessibility_keyboard.schemas.in  desktop_mate_accessibility_startup.schemas.in  desktop_mate_applications_at_mobility.schemas.in  desktop_mate_applications_at_visual.schemas.in  desktop_mate_applications_browser.schemas.in  desktop_mate_applications_office.schemas.in  desktop_mate_applications_terminal.schemas.in  desktop_mate_applications_window_manager.schemas.in  desktop_mate_background.schemas.in.in  desktop_mate_file_views.schemas.in  desktop_mate_interface.schemas.in.in  desktop_mate_lockdown.schemas.in  desktop_mate_peripherals_keyboard.schemas.in  desktop_mate_peripherals_mouse.schemas.in  desktop_mate_sound.schemas.in  desktop_mate_thumbnail_cache.schemas.in  desktop_mate_thumbnailers.schemas.in  desktop_mate_typing_break.schemas.in
libmatecanvas/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  autogen.sh  config.h.in  config.h.in~  configure  configure.in  libmatecanvas-zip.in
libmatecanvas/demos/: Makefile.am  Makefile.in  canvas-arrowhead.c  canvas-curve.c  canvas-features.c  canvas-fifteen.c  canvas-primitives.c  canvas-rich-text.c  canvas_demo.h  dash-demo.c
libmatecomponent/: ChangeLog  MAINTAINERS  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  autogen.sh  changes.txt  config.h.in  config.h.in~  configure  configure.in  libmatecomponent-zip.in  libmatecomponent.h  matecomponent-activation-config.xml
libmatecomponentui/: ChangeLog  MAINTAINERS  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  autogen.sh  changes.txt  config.h.in  config.h.in~  configure  configure.in  libmatecomponentui-zip.in  libmatecomponentui.h  matecomponent.h
libmatekbd/: AUTHORS  ChangeLog  ChangeLog.libgswitchit  ChangeLog.libkbdraw  Makefile.am  Makefile.in  NEWS  README.cvs  aclocal.m4  autogen.sh  config.h.in  configure  configure.in  libmatekbd.pc.in  libmatekbdui.pc.in
libmatekeyring/: AUTHORS  ChangeLog  HACKING  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  autogen.sh  config.h.in  config.h.in~  configure  configure.in
libmatenotify/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  libmatenotify.pc.in
libmateui/: AUTHORS  ChangeLog  MAINTAINERS  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  autogen.sh  config.h.in  config.h.in~  configure  configure.in  libmateui-zip.in
libmateweather/: AUTHORS  ChangeLog  MAINTAINERS  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  autogen.sh  config.h.in  configure  configure.in  gtk-doc.make
mate-applets/: AUTHORS  ChangeLog  MAINTAINERS  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h.in  config.h.in~  configure  configure.in  mate-applets.spec.in
mate-backgrounds/: AUTHORS  ChangeLog  MAINTAINERS  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  autogen.sh  configure  configure.in
mate-bluetooth/: AUTHORS  ChangeLog  ChangeLog.pre-2.27  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h.in~  configure  configure.ac  mate-bluetooth-1.0.pc.in
mate-calc/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure.ac  gcalctool.doap
mate-character-map/: AUTHORS  ChangeLog  ChangeLog.README  ChangeLog.pre-2-23  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  autogen.sh  config.h.in  config.h.in~  configure  configure.ac  gtkrc.win32  gucharmap.desktop.in.in  gucharmap.nsi.in  gucharmap.pc.in  gucharmap.schemas.in  gucharmap.spec.in
mate-common/: ChangeLog  ChangeLog.pre-git  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  configure  configure.in  mate-common.doap  mate-common.spec.in
mate-conf/: ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  autogen.sh  config.h.in  configure  configure.in  mateconf-2.0.pc.in  mateconf-2.m4.in  mateconf-zip.in
mate-conf-dbus/: ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  acconfig.h  aclocal.m4  autogen.sh  config.h.in  config.h.in~  configure  configure.in  intltool-extract.in  intltool-merge.in  intltool-update.in  mateconf-2.0.pc.in  mateconf-2.m4.in  mateconf-zip.in
mate-conf-editor/: AUTHORS  ChangeLog  ChangeLog.pre-git  MAINTAINERS  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  autogen.sh  config.h.in  config.h.in~  configure  configure.in
(+15335 files in other folders)
