SUBDIRS = matecomponent glade samples tests tools po doc

libincludedir = $(includedir)/libmatecomponentui-2.0
libinclude_HEADERS =    \
	matecomponent.h	\
	libmatecomponentui.h

EXTRA_DIST = \
	MAINTAINERS	     \
	libmatecomponentui-zip.in   \
	changes.txt          \
	gtk-doc.make

DISTCLEANFILES =

DISTCHECK_CONFIGURE_FLAGS = --enable-gtk-doc

